# swida-assignment

./: README.md
backend/: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
backend/apps/api/: errors.py  responses.py  urls.py
backend/apps/api/filters/: order.py
backend/apps/api/forms/: order.py  waypoint.py
backend/apps/api/middleware/: exceptions.py
backend/apps/api/serializers/: order.py  waypoint.py
backend/apps/api/views/: order.py  waypoint.py
backend/apps/core/: tests.py
backend/apps/core/fixtures/: order_fixture.json  waypoint_fixture.json
backend/apps/core/managers/: base.py
backend/apps/core/migrations/: 0001_initial.py  0002_alter_order_order_number.py
backend/apps/core/models/: __init__.py  order.py  waypoint.py
backend/docs/: swida-api.postman_collection.json
backend/swida/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts  utils.ts
frontend/src/api/: common.ts  responses.ts
frontend/src/constants/: query-keys.ts
frontend/src/pages/Order/: OrderPage.vue
frontend/src/pages/Order/components/: OrderDeleteModal.vue  OrderForm.vue  WaypointExpand.vue  WaypointForm.vue
frontend/src/pages/Order/core/: requests.ts
frontend/src/pages/Order/data/: models.ts
frontend/src/pages/Order/hooks/: userOrder.ts
